Finished Chess Engine
Implemented Stalemates and Checkmates. Chess Engine should be done aside from bug fixes as of this commit. Added a status message on the game page to display whose turn it is, and to display a win or draw message. Selected pieces are now highlighted in blue.

--- a/pychess/static/pychess/styles.css
+++ b/pychess/static/pychess/styles.css
@@ -35,3 +35,19 @@ a {
     color:white;
     text-align:center;
 }
+
+.gameContainer {
+    clear:both;
+    display:table;
+}
+
+.board {
+    float:left;
+    height:100%;
+}
+
+.info {
+    margin-left: 50px;
+    height:100%;
+    float:right;
+}
