Active Local Games now appear on home page
Active local games will now appear in a list on the home page. Starting a new local game will redirect you to a URL with the roomCode passed in as a GET parameter; such that refreshing the page will no longer result in creating a new game each time.

--- a/pychess/templates/pychess/index.html
+++ b/pychess/templates/pychess/index.html
@@ -7,5 +7,13 @@ pyChess Home
 
 
 {% block body %}
-Test
+    {% if localGames %}
+        <Strong>Local Games: </Strong>
+        <br>
+        {% for game in localGames %}
+            <a href="{% url 'localGame' %}?room={{game.roomCode}}">{{ game }}</a><br>
+        {% endfor %}
+    {% else %}
+        No Active Games
+    {% endif %}
 {% endblock %}
