--- a/pychess/templates/pychess/play.html
+++ b/pychess/templates/pychess/play.html
@@ -9,7 +9,7 @@ Play chess!
 {% block body %}
     <div style="font-size: 20px;">
         <div>
-            <a href="{% url 'localGame' %}">Local Game</a>
+            <a href="{% url 'localGame' %}">New Local Game</a>
         </div>
         <div>
             <a href="{% url 'networkGame' %}?g=new">New Network Game</a>
