Moves get displayed in info panel
Redid a lot of the game CSS. Broke the nav bar, but got the board centered and added a nice large status panel and info panel on the right side to display whose turn it is and what moves have already been played.

--- a/pychess/static/pychess/styles.css
+++ b/pychess/static/pychess/styles.css
@@ -6,48 +6,141 @@ a {
     color:rgb(233, 208, 145);
 }
 
+img {
+    width: 75%;
+    height:75%;
+}
 
 .header {
-    position:relative;
-    min-height:150px;
-    color:white;
-
-}
-
-.navbar {
-    position:absolute;
-    bottom:0;
-}
-
-.navlink {
-    margin-left: 10px;
-    margin-right: 10px;
-    border:solid;
-}
-
-.content {
-    height:80vh;
-    color:white;
+    height:10vh;
+    min-height:49px;
+    min-width:1008px;
+    color:aliceblue;
 }
 
 .footer {
     height:5vh;
-    color:white;
-    text-align:center;
+    min-height:24px;
+    min-width:1008px;
+    text-align: center;
+    color:aliceblue;
 }
 
-.gameContainer {
-    clear:both;
-    display:table;
+.content {
+    height: 85vh;
+    min-height:412px;
+    min-width:1008px;
+}
+
+.centeredContent {
+    height:85vh;
+    min-height:412px;
+    min-width:1008px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main {
+    display:flex;
+    height:95%;
+    width:66%;
+    min-width:665px;
+    min-height:392px;
+}
+
+.game {
+    display:flex;
+    width:60%;
+    margin:10px;
+    margin-right:5px;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.boardContainer {
+    width: 100%;
+    aspect-ratio: 1/1;
 }
 
 .board {
-    float:left;
-    height:100%;
+    table-layout: fixed;
+    height: 100%;
+    width: 100%;
+}
+
+.boardRow {
+    height: 12.0%;
+    min-height: 12.0%;
+    max-height: 12.0%;
+    overflow:hidden;
+}
+
+.lightCell {
+    background-color: #b3a58f;
+    width:12.5%;
+    min-width:12.5%;
+    max-width:12.5%;
+    text-align: center;
+}
+
+.darkCell {
+    background-color: #30538c;
+    width:12.5%;
+    min-width:12.5%;
+    max-width:12.5%;
+    text-align: center;
 }
 
 .info {
-    margin-left: 50px;
-    height:100%;
-    float:right;
+    display:flex;
+    flex-direction:column;
+    width:40%;
+
+    margin:10px;
+    margin-left:5px;
 }
+
+.infoTop {
+    display:flex;
+    flex-basis:auto;
+    flex-grow:0;
+    height:15%;
+    width:100%;
+    align-items: center;
+    justify-content: center;
+    border:solid;
+    border-radius: 12px;
+    border-color: aliceblue;
+    color: aliceblue;
+}
+
+.infoBottom {
+    display:flex;
+    flex-direction:column;
+    flex-basis:85%;
+    flex-shrink:0;
+    width:100%;
+    border:solid;
+    border-radius: 12px;
+    border-color: aliceblue;
+    color: aliceblue;
+    overflow:auto;
+}
+
+.move {
+    display: flex;
+    width:95%;
+    height:10%;
+    flex-grow:0;
+    flex-shrink:0;
+    flex-basis:auto;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:3px;
+    background-color:rgb(0, 78, 174);
+}
+
