--- a/pychess/templates/pychess/layout.html
+++ b/pychess/templates/pychess/layout.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="{% static 'pychess/styles.css' %}">
     </head>
     <body>
-        <div class="header" style="font-size:20px">
+        <div class="header">
             <h1 style="text-indent:10px;">pyChess</h1>
             {% if user.is_authenticated %}
             <div style="text-indent:10px">
@@ -18,7 +18,6 @@
                 You are not logged in
             </div>
             {% endif %}
-            <div class="navbar">
                 <a class="navlink" href="{% url 'index' %}">Home</a>
                 {% if user.is_authenticated %}
                 <a class="navlink" href="{% url 'play' %}">Play</a>
@@ -29,7 +28,6 @@
                 <a class="navlink" href="{% url 'register' %}">Register</a>
                 <a class="navlink" href="{% url 'spectate' %}">Spectate</a>
                 {% endif %}
-            </div>
         </div>
         <hr>
         <div class="content">
