--- a/pychess/templates/pychess/layout.html
+++ b/pychess/templates/pychess/layout.html
@@ -8,33 +8,33 @@
     </head>
     <body>
         <div class="header">
-            <h1 style="text-indent:10px;">pyChess</h1>
+            <div class="mainHeading">pyChess</div>
             {% if user.is_authenticated %}
-            <div style="text-indent:10px">
-                You are logged in as <strong>{{ user }}</strong>
-            </div>
+                <div class="subHeading">
+                    You are logged in as <strong>{{ user }}</strong>
+                </div>
             {% else %}
-            <div style="text-indent:10px;">
-                You are not logged in
-            </div>
+                <div class="subHeading">
+                    You are not logged in
+                </div>
             {% endif %}
+            <div class="navbar">
                 <a class="navlink" href="{% url 'index' %}">Home</a>
                 {% if user.is_authenticated %}
-                <a class="navlink" href="{% url 'play' %}">Play</a>
-                <a class="navlink" href="{% url 'review' %}">Review</a>
-                <a class="navlink" href="{% url 'spectate' %}">Spectate</a>
+                    <a class="navlink" href="{% url 'play' %}">Play</a>
+                    <a class="navlink" href="{% url 'review' %}">Review</a>
+                    <a class="navlink" href="{% url 'spectate' %}">Spectate</a>
                 {% else %}
-                <a class="navlink" href="{% url 'login' %}">Login</a>
-                <a class="navlink" href="{% url 'register' %}">Register</a>
-                <a class="navlink" href="{% url 'spectate' %}">Spectate</a>
+                    <a class="navlink" href="{% url 'login' %}">Login</a>
+                    <a class="navlink" href="{% url 'register' %}">Register</a>
+                    <a class="navlink" href="{% url 'spectate' %}">Spectate</a>
                 {% endif %}
+            </div>
         </div>
-        <hr>
         <div class="content">
         {% block body %}
         {% endblock %}
         </div>
-        <hr>
         <div class="footer">
             <h3>a cs50 project by Chris Goins</h3>
         </div>
